fixed title overflow

--- a/Client/src/Styles.css
+++ b/Client/src/Styles.css
@@ -938,7 +938,7 @@ footer {
         text-align: left;
         top: 50vh;
         left: 50vw;
-        font-size: 7vw;
+        font-size: 6.5vw;
         transform: translate(-50%, -50%);
         font-weight: 900;
     }
